Bug 2038194 - Make it more visible in browser UI that geolocation has been accessed - r=emz,saschanaz,urlbar-reviewers,desktop-theme-reviewers,daleharvey,hjones
Show the site permission box on SERPs with persisted search terms, where
the identity-box would otherwise be hidden by the invalid pageproxystate.
The lock/globe icon stays hidden and the permission box's own cascade
decides when it appears. Also tint geo sharing icon while a
capture is active.

Differential Revision: https://phabricator.services.mozilla.com/D299807

UltraBlame original commit: 109e6bcf66b942623b114dc4ff74490f297355c2

--- a/browser/themes/shared/identity-block/identity-block.css
+++ b/browser/themes/shared/identity-block/identity-block.css
@@ -10,6 +10,24 @@
   &[pageproxystate="invalid"] {
     pointer-events: none;
     -moz-user-focus: ignore;
+
+    #identity-icon-label {
+      display: none;
+    }
+
+    /* If the proxy state is invalid, but the urlbar is persisting search terms,
+       we still want the user to be able to interact with the identity box.
+       It will be visible. */
+    #urlbar[persistsearchterms] & {
+      pointer-events: auto;
+      -moz-user-focus: normal;
+
+      /* And don't show the identity icon box in this case,
+         just permissions indication */
+      > #identity-icon-box {
+        display: none;
+      }
+    }
   }
 }
 
@@ -22,17 +40,15 @@
   fill-opacity: var(--urlbar-icon-fill-opacity);
 }
 
-#identity-box[pageproxystate="invalid"] {
+#urlbar:not([persistsearchterms]) #identity-box[pageproxystate="invalid"] {
   > #identity-permission-box,
-  > #notification-popup-box,
-  #identity-icon-label {
+  > #notification-popup-box {
     display: none;
   }
 }
 
-/* stylelint-disable-next-line media-query-no-invalid */
 @media -moz-pref("browser.urlbar.searchModeSwitcher.featureGate") or -moz-pref("browser.urlbar.scotchBonnet.enableOverride") {
-  #identity-box[pageproxystate="invalid"] {
+  #urlbar:not([persistsearchterms]) #identity-box[pageproxystate="invalid"] {
     display: none;
   }
 }
@@ -75,11 +91,9 @@
 #identity-box[pageproxystate="valid"]:is(.notSecureText, .chromeUI, .extensionPage),
 #urlbar-label-box {
   margin-inline-end: 8px;
-  /* stylelint-disable-next-line media-query-no-invalid */
   @media -moz-pref("browser.urlbar.searchModeSwitcher.featureGate") or -moz-pref("browser.urlbar.scotchBonnet.enableOverride") {
     margin-inline-end: var(--urlbar-searchmodeswitcher-margin-inline-end);
   }
-  /* stylelint-disable-next-line media-query-no-invalid */
   @media -moz-pref("browser.urlbar.trustPanel.featureGate") {
     margin-inline-end: 0;
   }
@@ -229,7 +243,6 @@
 }
 
 /* SHARING ICON */
-
 #webrtc-sharing-icon[sharing="camera"] {
   list-style-image: url("chrome://browser/skin/notification-icons/camera.svg");
 }
@@ -244,12 +257,14 @@
 
 #geo-sharing-icon[sharing] {
   list-style-image: url("chrome://browser/skin/notification-icons/geo.svg");
+  -moz-context-properties: fill;
+  fill: var(--icon-color-critical);
 }
 
 #serial-sharing-icon[sharing] {
   list-style-image: url("chrome://browser/skin/notification-icons/serial.svg");
   -moz-context-properties: fill;
-  fill: rgb(224, 41, 29);
+  fill: var(--icon-color-critical);
 }
 
 .sharing-icon:not([sharing]) {
@@ -258,7 +273,7 @@
 
 #webrtc-sharing-icon[sharing]:not([paused]) {
   -moz-context-properties: fill;
-  fill: rgb(224, 41, 29);
+  fill: var(--icon-color-critical);
 }
 
 /* TRACKING PROTECTION ICON */
@@ -301,7 +316,6 @@
   display: none;
 }
 
-/* stylelint-disable-next-line media-query-no-invalid */
 @media -moz-pref("browser.urlbar.trustPanel.featureGate") {
   #tracking-protection-icon-container,
   /* Keep displaying the moz-extension or chrome UI chicklet */
